# miniword

./: .gitattributes  .gitignore  CLAUDE.md  README.md  builder.py  linewrap.py  miniword.desktop  miniword.py  pyproject.toml  runtests.py  simplelayout.py  styles.py  test_all.py  testdevice.py  testing.py  texeltree.py  textview.py  utils.py  weights.py  wxdevice.py  wxtextview.py
.github/workflows/: release.yml  test.yml
docs/: fileformat.md  sections_concept.md  txl_format.md
examples/: mdfilter.py  txtfilter.py  wordcount.py
installer/: bundle_cairo_macos.sh  bundle_cairo_windows.ps1  bundle_fontconfig_macos.sh  miniword.iss  miniword.manifest
miniword/: __init__.py  __main__.py  annotation.py  builder.py  cairodevice.py  document.py  documentnode.py  documentview.py  editorbase.py  factory.py  fontctrl.py  icons.py  image.py  image_editors.py  image_panel.py  images.py  importexport.py  inspector.py  mainwindow.py  pagegen.py  papersizes.py  search.py  searchtool.py  settingsinspector.py  stretchable.py  stylemenu.py  styles.py  stylesheet.py  table_boxes.py  table_editors.py  table_panel.py  tables.py  texels.py  texeltreeformat.py  threestatespin.py  txlio.py  unit_entry.py
miniword/core/: config.py  document.py  documentnode.py  fontfinder.py  respath.py  styles.py  stylesheet.py  texels.py  units.py  utils.py
miniword/footnotes/: footnotes.py
miniword/images/: __init__.py  image_controllers.py  imageio.py  (+3 more)
test/: einstein.py  einstein.txl  footnotes.md  hangul_test.txl  hyperlinks.md  jp_test.txl  moby.py  moby.txl  moby.txt  tesla.md  tesla.txl
(+81 files in other folders)
