[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniword"
version = "0.1.4"
description = "A minimal word processor in Python"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
dependencies = [
    "wxPython>=4.0",
    "cairocffi",
]

[project.optional-dependencies]
full = [
    "uharfbuzz",
    "mistune",
    "fonttools",
]

[project.urls]
Homepage = "https://codeberg.org/chrisecker/miniword"

[tool.setuptools.packages.find]
include = ["miniword*"]

[tool.setuptools.package-data]
miniword = ["icons/*.svg"]

[project.scripts]
miniword = "miniword.__main__:main"
